--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,11 @@ edition = "2021"
 anyhow = "1.0.68"                                                  # error handling
 bytes = "1.3.0"                                                    # helps wrap responses from reqwest
 clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
+futures-core = "0.3.30"
+futures-sink = "0.3.30"
+futures-util = { version = "0.3.30", features = ["sink"] }
 hex = "0.4.3"
+kanal = "0.1.0-pre8"                                               # channel
 regex = "1"                                                        # for regular expressions
 reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
 serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
